# debt-calculator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github-actions-ci.yml
debt_calculator/: main.py
debt_calculator/inner_logic/: debt.py  error_messages.py  plot.py
debt_calculator/models/: debt_item.py
debt_calculator/service/: data_store.py  plot.py
tests/: test_debt_calculator.py  test_helpers.py
