[tool.poetry]
name = "debt-calculator"
version = "0.1.0"
description = ""
authors = ["AbdelrhmanHamouda <abdelrhman.ahmed@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
coverage = "^6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
